Can't even get the index file to work!!!
Doh!

--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<DOCTYPE !html>
 
-
+<html>
  <a href="https://github.com/dwp-coding-club/dwp-coding-club.github.io/blob/master/cred/Considerations.md">Messy notes</a> 
+
+</html>
